@@ -1,3 +1,8 @@
+UNRELEASED, S3QL tip
+
+  * Fixed "ValueError: Can't dump NULL values" crash when file system
+    metadata was uploaded during heavy file system activity.
+
 2011-11-27, S3QL 1.7
 
   * Extended attribute names are now de-duplicated.
